[tool.poetry]
name = "django-livefield"
version = "4.3.0"
description = "Convenient soft-deletion support for Django models"
authors = ["Hearsay Social <opensource@hearsaysocial.com>"]
license = "MIT"
readme = "README.md"
keywords = ["python", "django", "soft-delete"]
packages = [
    { include = "livefield", from = "src" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]

[tool.poetry.urls]
"Github Repo" = "https://github.com/hearsaycorp/django-livefield"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
Django = ">=4.2,<5.3"

[tool.poetry.group.dev.dependencies]
flake8 = "*"
pylint = "*"
pytest = "*"
pytest-django = "*"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
